Add essential setup files for testing and running
- Add .gitkeep files for dataset/ and results/ directories
- Add env.example file for environment variable template
- Update .gitignore to allow .gitkeep files
- Ensure directory structure exists for immediate testing

--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,14 @@ env/
 # Dataset files (large files, download separately)
 dataset/locomo10.json
 dataset/locomo10_rag.json
+# But keep .gitkeep to preserve directory structure
+!dataset/.gitkeep
 
 # Results
 results/*.json
 results/*.csv
+# But keep .gitkeep to preserve directory structure
+!results/.gitkeep
 
 # ChromaDB
 chroma_db/
